--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+*secrets.json
+*data.json
+*secrets.do
+*client_secret.json
+*.pyc
+*.csv
+*.zip
+*.gz
+.DS_Store
+users
+*.sublime-project
+*.sublime-workspace
+*.xlsx
+*.png
+*.dta
+*.log
+ga_config.json
+.python-version
+venv
+.idea
+*.iml
